@@ -11,6 +11,8 @@ Version 6.7.2 - not yet released
   - increase upper limit for plane wing area (#3154)
 * waypoints
   - correctly handle S latitudes and W longitudes in waypoint editor (#3155)
+* Kobo
+  - fix misassigned passphrase in WiFi dialog (#3151)
 
 Version 6.7.1 - 2013/10/11
 * replay
